--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -5,4 +5,5 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - uses: iterative/setup-dvc@v1
+      - run: sudo apt install --yes fswatch
       - run: dvc exp run
